--- a/website/static/css/theme.css
+++ b/website/static/css/theme.css
@@ -1,8 +1,10 @@
 :root {
-    --background: rgba(12, 13, 14, 1);
-    --text-color: rgba(133, 133, 133, 1);
-    --font-main: 'Poppins', sans-serif;
-    --font-head: 'Raleway', sans-serif;
+    --background: #04010f;
+    --background-header: #04010f;
+    --button-back: rgba(240, 240, 240, 0.95);
+    --text-color: #C0C0C0;
+    --font-main: 'Inter', sans-serif;
+    --font-head: 'Inter', sans-serif;
 
 }
 
