--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,18 +4,25 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel = "stylesheet" href = "../static/css/theme.css">
-  <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Raleway:wght@400;700&display=swap">
+  <link rel = "stylesheet" href = "../static/css/header.css">
+  <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
 </head>
 <body>
   <header>
+    <div class = "head">
     <div class = "logo-image">
-      <img src = "">
+      <img src = "../images/logo.webp" class = "logo" alt = "ЛОГО">
     </div>
     <div class = "logo-text">
-      <h1> ТЕМНАЯ МАТРИЦА </h1>
+      <h1> <span> DARK </span> <br> <span> PULSE </span> </h1>
+    </div>
+     <nav>
+       <a> Главная </a>
+       <a> Новости </a>
+       <a> Документация </a>
+       <button class = "btn-about"> О нас </button>
+     </nav>
     </div>
   </header>
-
-
 </body>
 </html>
