--- a/website/static/css/header.css
+++ b/website/static/css/header.css
@@ -38,7 +38,7 @@ header {
 h1 {
     color: var(--text-color);
     font-family: var(--font-head);
-    letter-spacing: 2.2px;
+    letter-spacing: 4.5px;
     margin-bottom: 8px;
 }
 
@@ -61,7 +61,7 @@ a {
     padding: 10px 50px;
     border-radius: 8px;
     background-color: var(--button-back);
-    opacity: 0.6;
+    color: var(--text-color);
     border: none;
 }
 
