--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -5,7 +5,8 @@
   <title>Title</title>
   <link rel = "stylesheet" href = "../static/css/theme.css">
   <link rel = "stylesheet" href = "../static/css/header.css">
-  <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+  <link rel = "stylesheet" href = "../static/css/main.css">
+  <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap">
 </head>
 <body>
   <header>
@@ -24,5 +25,19 @@
      </nav>
     </div>
   </header>
+  <main>
+    <div class = "main-content">
+       <div class = "hero">
+         <div class = "hero-text">
+           <h2> КИБЕРБЕЗОПАСНОСТЬ КАК ОСНОВА</h2>
+           <p>Курс по кибербезопасности учит защищать данные
+             и системы от хакерских атак, вирусов и утечек.
+             Вы освоите основы защиты сетей, анализа угроз
+             и работы с современными инструментами безопасности.</p>
+           <div class = "start-btn"> <button> изучить </button></div>
+         </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
