--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -13,9 +13,11 @@ main {
 }
 
 .hero {
-    padding: 20px;
+    display: flex;
+    justify-content: space-between;
     background: var(--background-hero);
     border-radius: 40px;
+    border: 1px solid var(--color-table);
     width: 100%;
     height: 100%;
 }
@@ -26,12 +28,29 @@ align-items: center;
 flex-direction: column;
 justify-content: center;
 width: 35%;
+margin-left: 40px;
 height: 100%;
+margin-top: 50px;
+}
+
+.hero-img {
+    opacity: 0.2;
+    width: 50%;
+    height: 100%;
+}
+
+.hero-img img {
+    width: 100%;
+    height: 100%;
 }
 
 .hero-text p {
     margin-left: 9px;
     letter-spacing: 1.5px;
+}
+
+.hero-text p:hover {
+    transform: scale(1.05);
 }
 
 h2 {
@@ -57,3 +76,8 @@ h2 {
     letter-spacing: 3px;
     color: var(--text-color);
 }
+
+.green-text {
+    color: var(--color-green);
+}
+
