--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,6 +6,7 @@
   <link rel = "stylesheet" href = "../static/css/theme.css">
   <link rel = "stylesheet" href = "../static/css/header.css">
   <link rel = "stylesheet" href = "../static/css/main.css">
+  <link rel = "stylesheet" href = "../static/css/footer.css">
   <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap">
 </head>
 <body>
@@ -29,15 +30,25 @@
     <div class = "main-content">
        <div class = "hero">
          <div class = "hero-text">
-           <h2> КИБЕРБЕЗОПАСНОСТЬ КАК ОСНОВА</h2>
-           <p>Курс по кибербезопасности учит защищать данные
+           <h2> КИБЕРБЕЗОПАСНОСТЬ КАК ОСНОВА:</h2>
+           <p>Курс по кибербезопасности учит <span class = "green-text"> защищать данные </span>
              и системы от хакерских атак, вирусов и утечек.
              Вы освоите основы защиты сетей, анализа угроз
-             и работы с современными инструментами безопасности.</p>
+             и работы с <span class = "green-text"> современными инструментами безопасности.</span> </p>
            <div class = "start-btn"> <button> изучить </button></div>
+         </div>
+         <div class = "hero-img">
+           <img src = "../images/shield.webp">
          </div>
       </div>
     </div>
   </main>
+  <footer>
+    <br>
+    <div class = "footer">
+      <p> DARK PULSE 2025</p>
+      <small> Все права защищены.</small>
+    </div>
+  </footer>
 </body>
 </html>
