практически готов главный баннер,начат заголовок для модуля

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -41,6 +41,25 @@
            <img src = "../images/shield.webp">
          </div>
       </div>
+      <div class = "slogan-container">
+        <div class = "first-slogan">
+
+        </div>
+        <div class = "second-slogan">
+
+        </div>
+        <div class = "third-slogan">
+          <div class = "slogan-text">
+            <h3> Технологии развиваются стремительно — твоя защита должна быть ещё быстрее.</h3>
+          </div>
+        </div>
+      </div>
+      <section>
+      <div class = "mini-info">
+       <h2> Мини-курс «Основы кибербезопасности» </h2>
+        <p style = "font-size: 18px; color: var(--color-green); opacity: 0.7;" > Модуль 1. Введение в кибербезопасность  </p>
+      </div>
+      </section>
     </div>
   </main>
   <footer>
