--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -2,14 +2,13 @@ main {
     font-family: var(--font-main);
     color: var(--text-color);
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
 }
 
 .main-content {
     width: 70%;
-    height: 500px;
+    height: 100%;
 }
 
 .hero {
@@ -81,3 +80,53 @@ h2 {
     color: var(--color-green);
 }
 
+.slogan-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 350px;
+}
+
+.first-slogan {
+    width: 25%;
+    height: 80%;
+    border: 0.9px solid var(--color-table);
+    border-radius: 40px;
+}
+
+.second-slogan {
+    width: 25%;
+    height: 80%;
+    border: 0.9px solid var(--color-table);
+    border-radius: 40px;
+}
+
+.third-slogan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    height: 80%;
+    border: 0.9px solid var(--color-table);
+    border-radius: 40px;
+}
+
+.slogan-text {
+    width: 80%;
+    height: 60%;
+}
+
+.slogan-text h3 {
+    opacity: 0.8;
+    font-size: 30px;
+}
+
+.mini-info {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 150px;
+}
