--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -130,3 +130,39 @@ align-items: center;
 width: 100%;
 height: 150px;
 }
+
+.module-1 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.module-1-text {
+    width: 50%;
+}
+
+.module-1-check {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    height: 200px;
+}
+
+.check {
+    display: flex;
+    align-items: center;
+    width: 30%;
+}
+
+.check p {
+    font-size: 20px;
+}
+
+.check-mark {
+    width: 80px;
+    height: 80px;
+}
+
