--- a/website/static/css/theme.css
+++ b/website/static/css/theme.css
@@ -16,6 +16,7 @@
 
 body {
      background-color: var(--background);
+     background-image: url("../images/stars.gif");
      color: var(--text-color);
      font-family: var(--font-main);
 }
