--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -55,10 +55,40 @@
         </div>
       </div>
       <section>
-      <div class = "mini-info">
-       <h2> Мини-курс «Основы кибербезопасности» </h2>
-        <p style = "font-size: 18px; color: var(--color-green); opacity: 0.7;" > Модуль 1. Введение в кибербезопасность  </p>
-      </div>
+        <div class = "mini-info">
+          <h2> Мини-курс «Основы кибербезопасности» </h2>
+          <p style = "font-size: 18px; color: var(--color-green); opacity: 0.7;" > Модуль 1. Введение в кибербезопасность  </p>
+        </div>
+        <div class = "module-1">
+          <div class = "module-1-text">
+            <p>
+              Кибербезопасность — это «щит» в цифровом мире. Она защищает компьютеры, сети и данные от атак хакеров, вирусов и прочих онлайн-угроз.
+              Три главные цели безопасности:
+              Конфиденциальность — никто лишний не увидит ваши данные.
+              Целостность — информация остаётся неизменной.
+              Доступность — нужные сервисы всегда под рукой.
+              Основные угрозы:
+              Вирусы и трояны;
+              Фишинг (письма-обманки);
+              DDoS-атаки;
+              Социальная инженерия (обман людей, а не компьютеров).
+            </p>
+          </div>
+          <div class = "module-1-check">
+            <div class = "check check-1">
+              <img src = "../images/check.webp" class = "check-mark">
+              <strong> Спрос на специалистов огромен </strong>
+            </div>
+            <div class = "check check-2">
+              <img src = "../images/check.webp" class = "check-mark">
+              <strong> Удаленная работа </strong>
+            </div>
+            <div class = "check check-3">
+              <img src = "../images/check.webp" class = "check-mark">
+              <strong> Получение универсальных навыков </strong>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </main>
