сделан шаблон формы отправки

--- a/website/static/css/theme.css
+++ b/website/static/css/theme.css
@@ -14,9 +14,12 @@
 
 * {margin: 0px; padding: 0px;}
 
+html {
+     scroll-behavior: smooth;
+}
+
 body {
      background-color: var(--background);
-     background-image: url("../images/stars.gif");
      color: var(--text-color);
      font-family: var(--font-main);
 }
