--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -22,14 +22,14 @@ main {
 }
 
 .hero-text {
-display: flex;
-align-items: center;
-flex-direction: column;
-justify-content: center;
-width: 35%;
-margin-left: 40px;
-height: 100%;
-margin-top: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 35%;
+    margin-left: 40px;
+    height: 100%;
+    margin-top: 50px;
 }
 
 .hero-img {
@@ -164,5 +164,11 @@ height: 150px;
 .check-mark {
     width: 80px;
     height: 80px;
+}
+
+.stars {
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
 }
 
