--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -39,7 +39,7 @@
            <div class = "start-btn"> <a href = "#search"> <button> изучить </button> </a> </div>
          </div>
          <div class = "hero-img">
-           <img src = "../images/shield.webp">
+           <img src = "../images/shield.webp" alt = "лого щит">
          </div>
       </div>
       <div class = "slogan-container">
@@ -77,20 +77,39 @@
           </div>
           <div class = "module-1-check">
             <div class = "check check-1">
-              <img src = "../images/check.webp" class = "check-mark">
+              <img src = "../images/check.webp" class = "check-mark" alt = "галочка">
               <strong> Спрос на специалистов огромен </strong>
             </div>
             <div class = "check check-2">
-              <img src = "../images/check.webp" class = "check-mark">
+              <img src = "../images/check.webp" class = "check-mark" alt = "галочка">
               <strong> Удаленная работа </strong>
             </div>
             <div class = "check check-3">
-              <img src = "../images/check.webp" class = "check-mark">
+              <img src = "../images/check.webp" class = "check-mark" alt = "галочка">
               <strong> Получение универсальных навыков </strong>
             </div>
           </div>
         </div>
       </section>
+      <div class = "news-h3">
+        <h3> Новости из мира кибербезопасности </h3>
+      </div>
+      <br>
+      <hr>
+      <div class = "news">
+        <div class = "news-banner news-banner-1">
+
+        </div>
+        <div class = "news-banner news-banner-2">
+
+        </div>
+        <div class = "news-banner news-banner-3">
+
+        </div>
+        <div class = "news-banner news-banner-4">
+
+        </div>
+      </div>
       <div class = "form-cont">
         <div class = "form-text">
           <h4> Имеются доп.вопросы?</h4>
