--- a/website/static/css/form.css
+++ b/website/static/css/form.css
@@ -6,6 +6,8 @@ align-content: center;
 }
 
 .form-cont {
+background: url("../../images/shield.webp") no-repeat center center;;
+background-size: 600px 600px;
 display: flex;
 align-items: center;
 flex-direction: column;
