--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -184,6 +184,10 @@ height: 150px;
 }
 
 .news-banner-1 {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    font-size: 18px;
     grid-row: 1/3;
 }
 
@@ -200,4 +204,17 @@ height: 150px;
 
 .news-banner {
     border: 2px solid black;
+}
+
+.news-banner-1-text {
+padding: 10px;
+width: 75%;
+height: 75%;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.news-banner-1-text a {
+text-decoration: none;
 }
