--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -9,7 +9,7 @@
      <nav>
        <a href = "../templates/index.html"> Главная </a>
        <a href = "../templates/news.html"> Новости </a>
-       <a> Документация </a>
+       <a href = "../templates/document.html"> Документация </a>
        <button class = "btn-about"> О нас </button>
      </nav>
     </div>
