добавлен блок с информацией о проекте (еще будет меняться)

--- a/website/static/css/footer.css
+++ b/website/static/css/footer.css
@@ -4,6 +4,8 @@ footer {
 }
 
 .footer {
+    border-radius: 20px;
+    background: var(--background-footer);
     display: flex;
     flex-direction: column;
     justify-content: center;
