--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -103,22 +103,39 @@
 
         </div>
       </div>
-      <div class = "form-cont">
-        <div class = "form-text">
-          <h4> Имеются доп.вопросы?</h4>
-          <p> Напишите нам через форму ниже</p>
-        </div> <br>
-        <form>
-          <label> Имя </label>
-          <input>
-          <label> email </label>
-          <input>
-          <label> Сообщение </label>
-          <textarea> </textarea> <br>
-          <button> отправить </button>
-        </form>
+      <div class = "info-project">
+         <div class = "info-project-text">
+            <h3> Информация о проекте </h3> <br>
+           <p> <strong> Dark Pulse </strong> — это информационный портал о кибербезопасности. Мы освещаем всё самое важное: от новостей о взломах и утечках до практических рекомендаций, которые помогают защитить личные данные и корпоративные системы.
+              Наш проект создан для того, чтобы сделать безопасность в цифровом мире доступной и понятной. Мы верим, что знания и вовремя полученная информация снижают риски и помогают избежать серьёзных проблем.
+             На сайте Dark Pulse вы найдёте:
+             <ul><br>
+                <li> Свежие новости о <mark> кибератаках, уязвимостях и угрозах; </mark> </li>
+                <li> Аналитику и разборы громких инцидентов; </li>
+                <li> Пошаговые инструкции и чек-листы по защите информации; </li>
+                <li> Советы для пользователей, специалистов и бизнеса. </li>
+             </ul><br>
+                 <b> Наша цель — </b> <u> не только информировать, но и учить: </u> <br> как действовать в условиях цифровых угроз и какие шаги помогут повысить уровень защиты.
+              «Актуально о рисках. Практично о защите.»
+           </p>
+         </div>
+        </div>
+        <div class = "form-cont">
+          <div class = "form-text">
+            <h4> Имеются доп.вопросы?</h4>
+            <p> Напишите нам через форму ниже</p>
+            <form>
+              <label> Имя </label>
+              <input>
+              <label> email </label>
+              <input>
+              <label> Сообщение </label>
+              <textarea> </textarea> <br>
+              <button> отправить </button>
+            </form>
+          </div> <br>
+        </div>
       </div>
-    </div>
   </main>
   <div id = "footer-placeholder"></div>
   <script src = "../static/js/script.js"></script>
