--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -218,3 +218,24 @@ align-items: center;
 .news-banner-1-text a {
 text-decoration: none;
 }
+
+.info-project {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 720px;
+    margin-bottom: 100px;
+}
+
+.info-project-text {
+    font-size: 19px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+}
+
+.info-project-text h3{
+font-size: 31px;
+}
