--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title> DARK PULSE </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel = "stylesheet" href = "../static/css/theme.css">
   <link rel = "stylesheet" href = "../static/css/header.css">
   <link rel = "stylesheet" href = "../static/css/main.css">
@@ -24,7 +25,7 @@
            <div class = "start-btn"> <a href = "#search"> <button> изучить </button> </a> </div>
          </div>
          <div class = "hero-img">
-           <img src = "../images/shield.webp" alt = "лого щит">
+           <img src = "../images/shield.webp" alt = "изображение в виде щита">
          </div>
       </div>
       <div class = "slogan-container">
@@ -103,7 +104,7 @@
 
         </div>
       </div>
-      <div class = "info-project">
+      <section class = "info-project">
          <div class = "info-project-text">
             <h3> Информация о проекте </h3> <br>
            <p> <strong> Dark Pulse </strong> — это информационный портал о кибербезопасности. Мы освещаем всё самое важное: от новостей о взломах и утечках до практических рекомендаций, которые помогают защитить личные данные и корпоративные системы.
@@ -119,7 +120,7 @@
               «Актуально о рисках. Практично о защите.»
            </p>
          </div>
-        </div>
+        </section>
         <div class = "form-cont">
           <div class = "form-text">
             <h4> Имеются доп.вопросы?</h4>
