--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -10,7 +10,7 @@
        <a href = "../templates/index.html"> Главная </a>
        <a href = "../templates/news.html"> Новости </a>
        <a href = "../templates/document.html"> Документация </a>
-       <button class = "btn-about"> О нас </button>
+       <a href = "#about-us"> <button class = "btn-about"> О нас </button> </a>
      </nav>
     </div>
   </header>
