--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title> DARK PULSE </title>
@@ -14,103 +14,108 @@
 <body>
   <div id="header-placeholder"></div>
   <main>
-    <div class = "main-content">
-       <div class = "hero">
-         <div class = "hero-text">
+    <div class="main-content">
+       <div class="hero">
+         <div class="hero-text">
            <h2> КИБЕРБЕЗОПАСНОСТЬ КАК ОСНОВА:</h2>
-           <p>Курс по кибербезопасности учит <span class = "green-text"> защищать данные </span>
+           <p>Курс по кибербезопасности учит <span class ="green-text"> защищать данные </span>
              и системы от хакерских атак, вирусов и утечек.
              Вы освоите основы защиты сетей, анализа угроз
-             и работы с <span class = "green-text"> современными инструментами безопасности.</span> </p>
-           <div class = "start-btn"> <a href = "#search"> <button> изучить </button> </a> </div>
+             и работы с <span class ="green-text"> современными инструментами безопасности.</span> </p>
+           <div class ="start-btn"> <a href="#search"> <button> изучить </button> </a> </div>
          </div>
-         <div class = "hero-img">
-           <img src = "../images/shield.webp" alt = "изображение в виде щита">
+         <div class="hero-img">
+           <img src="../images/shield.webp" alt="изображение в виде щита">
          </div>
       </div>
-      <div class = "slogan-container">
-        <div class = "first-slogan" style = "background: url(https://i.ibb.co/B2h8qPTC/twinkling-stars-transparent.gif);">
+      <div class="slogan-container">
+        <div class = "first-slogan" style="background: url(https://i.ibb.co/B2h8qPTC/twinkling-stars-transparent.gif);">
 
         </div>
-        <div class = "second-slogan" style = "background: url(https://i.ibb.co/B2h8qPTC/twinkling-stars-transparent.gif);">
+        <div class="second-slogan" style="background: url(https://i.ibb.co/B2h8qPTC/twinkling-stars-transparent.gif);">
 
         </div>
-        <div class = "third-slogan">
-          <div class = "slogan-text">
+        <div class ="third-slogan">
+          <div class="slogan-text">
             <h3> Технологии развиваются стремительно — твоя защита должна быть ещё быстрее.</h3>
           </div>
         </div>
       </div>
       <section>
-        <div class = "mini-info">
+        <div class="mini-info">
           <h2> Мини-курс «Основы кибербезопасности» </h2>
-          <p style = "font-size: 18px; color: var(--color-green); opacity: 0.7;" > Модуль 1. Введение в кибербезопасность  </p>
+          <p style="font-size: 18px; color: var(--color-green); opacity: 0.7;" > Модуль 1. Введение в кибербезопасность  </p>
         </div>
-        <div class = "module-1" id = "search">
-          <div class = "module-1-text">
-            <p>
-              Кибербезопасность — это «щит» в цифровом мире. Она защищает компьютеры, сети и данные от атак хакеров, вирусов и прочих онлайн-угроз.
-              Три главные цели безопасности:
-              Конфиденциальность — никто лишний не увидит ваши данные.
-              Целостность — информация остаётся неизменной.
-              Доступность — нужные сервисы всегда под рукой.
-              Основные угрозы:
-              Вирусы и трояны;
-              Фишинг (письма-обманки);
-              DDoS-атаки;
-              Социальная инженерия (обман людей, а не компьютеров).
+        <div class="module-1" id="search">
+          <div class="module-1-text">
+              <b> Кибербезопасность — это «щит» в цифровом мире.</b>
+              <p> Она защищает компьютеры, сети и данные от атак хакеров,
+              вирусов и прочих онлайн-угроз.
             </p>
+              <u> Три главные цели безопасности: </u>
+              <ul> <br>
+                <li> Конфиденциальность — никто лишний не увидит ваши данные. </li>
+                <li> Целостность — информация остаётся неизменной. </li>
+                <li> Доступность — нужные сервисы всегда под рукой. </li>
+              </ul>
+              <ul> <br>
+                <li> Основные угрозы: </li>
+                <li> Вирусы и трояны; </li>
+                <li> Фишинг (письма-обманки); </li>
+                <li> DDoS-атаки; </li>
+                <li> Социальная инженерия (обман людей, а не компьютеров). </li>
+              </ul>
           </div>
-          <div class = "module-1-check">
-            <div class = "check check-1">
-              <img src = "../images/check.webp" class = "check-mark" alt = "галочка">
+          <div class="module-1-check">
+            <div class="check check-1">
+              <img src="../images/check.webp" class="check-mark" alt="изображение в виде галочки">
               <strong> Спрос на специалистов огромен </strong>
             </div>
-            <div class = "check check-2">
-              <img src = "../images/check.webp" class = "check-mark" alt = "галочка">
+            <div class="check check-2">
+              <img src="../images/check.webp" class="check-mark" alt="изображение в виде галочки">
               <strong> Удаленная работа </strong>
             </div>
-            <div class = "check check-3">
-              <img src = "../images/check.webp" class = "check-mark" alt = "галочка">
+            <div class="check check-3">
+              <img src="../images/check.webp" class="check-mark" alt="изображение в виде галочки">
               <strong> Получение универсальных навыков </strong>
             </div>
           </div>
         </div>
       </section>
-      <div class = "news-h3">
+      <div class="news-h3">
         <h3> Новости из мира кибербезопасности </h3>
       </div>
       <br>
-      <hr style = "color: var(--color-table);">
-      <div class = "news">
-        <div class = "news-banner news-banner-1">
-        <img src = "../images/main_banner.webp" style ="width: 500px; border-radius: 20px;">
-          <article class = "news-banner-1-text"> <br>
+      <hr style="color: var(--color-table);">
+      <div class="news">
+        <div class="news-banner news-banner-1">
+        <img src="../images/main_banner.webp" style="width: 500px; border-radius: 20px;">
+          <article class="news-banner-1-text"> <br>
             <b> Утечка данных клиентов Gucci, Balenciaga и Alexander McQueen </b>
             <p> В июне 2025 года хакеры группы Shiny Hunters получили доступ к персональным данным клиентов Kering
                (родительской компании брендов Gucci, Balenciaga, Alexander McQueen).
                Утекли имена, адреса электронной почты, номера телефонов, даты рождения. Финансовые данные,
                по заявлениям компании, не похищены.</p>
-            <a href = "../templates/news.html"> <i> подробнее... </i> </a>
+            <a href="../templates/news.html"> <i> подробнее... </i> </a>
           </article>
         </div>
-        <article class = "news-banner news-banner-2">
+        <article class="news-banner news-banner-2">
           <p> В Германии убытки от кибератак
               в течение года превысили €300 млрд — компании всё чаще
               страдают от ransomware, утечек и перебоев в производстве.</p>
-          <a href = "../templates/news.html"> подробнее... </a>
+          <a href="../templates/news.html"> подробнее... </a>
         </article>
-        <article class = "news-banner news-banner-3">
+        <article class="news-banner news-banner-3">
           <p> Apple сообщила: найдено 4 кампании со шпионскими программами,
             бьющими по журналистам, активистам и госслужащим.
             Используются уязвимости zero-day и zero-click,
             поэтому заражение может произойти без действий пользователя.
             Решение — срочно обновить устройства.</p>
-          <a href = "../templates/news.html"> подробнее... </a>
+          <a href="../templates/news.html"> подробнее... </a>
         </article>
       </div>
-      <section class = "info-project">
-         <div class = "info-project-text" id = "about-us">
+      <section class="info-project">
+         <div class="info-project-text" id="about-us">
             <h3> Информация о проекте </h3> <br>
            <p> <strong> Dark Pulse </strong> — это информационный портал о кибербезопасности. Мы освещаем всё самое важное: от новостей о взломах и утечках до практических рекомендаций, которые помогают защитить личные данные и корпоративные системы.
               Наш проект создан для того, чтобы сделать безопасность в цифровом мире доступной и понятной. Мы верим, что знания и вовремя полученная информация снижают риски и помогают избежать серьёзных проблем.
@@ -126,8 +131,8 @@
            </p>
          </div>
         </section>
-        <div class = "form-cont">
-          <div class = "form-text">
+        <div class="form-cont">
+          <div class="form-text">
             <h4> Имеются доп.вопросы?</h4>
             <p> Напишите нам через форму ниже</p>
             <form>
@@ -143,7 +148,7 @@
         </div>
       </div>
   </main>
-  <div id = "footer-placeholder"></div>
-  <script src = "../static/js/script.js"></script>
+  <div id="footer-placeholder"></div>
+  <script src="../static/js/script.js"></script>
 </body>
 </html>
