--- a/website/templates/news.html
+++ b/website/templates/news.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel = "stylesheet" href = "../static/css/theme.css">
+    <link rel = "stylesheet" href = "../static/css/news.css">
     <link rel = "stylesheet" href = "../static/css/header.css">
     <link rel = "stylesheet" href = "../static/css/footer.css">
     <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap">
 </head>
 <body>
   <div id = "header-placeholder"></div>
-  <main> </main>
+  <main>
+    <div class = "main-content">
+      <section class = "main-news">
+        <h1> Новостной блок </h1>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
+        <article>
+
+        </article>
+      </section>
+    </div>
+  </main>
   <div id = "footer-placeholder"></div>
   <script src = "../static/js/script.js"></script>
 </body>
