--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,6 +9,7 @@
   <link rel = "stylesheet" href = "../static/css/main.css">
   <link rel = "stylesheet" href = "../static/css/footer.css">
   <link rel = "stylesheet" href = "../static/css/form.css">
+  <link rel = "stylesheet" href = "../static/css/media.css">
   <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap">
 </head>
 <body>
@@ -53,12 +54,12 @@
               вирусов и прочих онлайн-угроз.
             </p>
               <u> Три главные цели безопасности: </u>
-              <ul> <br>
+              <ul>
                 <li> Конфиденциальность — никто лишний не увидит ваши данные. </li>
                 <li> Целостность — информация остаётся неизменной. </li>
                 <li> Доступность — нужные сервисы всегда под рукой. </li>
               </ul>
-              <ul> <br>
+              <ul>
                 <li> Основные угрозы: </li>
                 <li> Вирусы и трояны; </li>
                 <li> Фишинг (письма-обманки); </li>
@@ -119,8 +120,8 @@
             <h3> Информация о проекте </h3> <br>
            <p> <strong> Dark Pulse </strong> — это информационный портал о кибербезопасности. Мы освещаем всё самое важное: от новостей о взломах и утечках до практических рекомендаций, которые помогают защитить личные данные и корпоративные системы.
               Наш проект создан для того, чтобы сделать безопасность в цифровом мире доступной и понятной. Мы верим, что знания и вовремя полученная информация снижают риски и помогают избежать серьёзных проблем.
-             На сайте Dark Pulse вы найдёте:
-             <ul><br>
+             На сайте Dark Pulse вы найдёте: </p>
+             <ul>
                 <li> Свежие новости о <mark> кибератаках, уязвимостях и угрозах; </mark> </li>
                 <li> Аналитику и разборы громких инцидентов; </li>
                 <li> Пошаговые инструкции и чек-листы по защите информации; </li>
@@ -128,7 +129,6 @@
              </ul><br>
                  <b> Наша цель — </b> <u> не только информировать, но и учить: </u> <br> как действовать в условиях цифровых угроз и какие шаги помогут повысить уровень защиты.
               «Актуально о рисках. Практично о защите.»
-           </p>
          </div>
         </section>
         <div class="form-cont">
