--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -36,9 +36,7 @@
     letter-spacing: 1.5px;
 }
 
-.hero-text p:hover {
-    transform: scale(1.05);
-}
+.hero-text p:hover {transform: scale(1.05);}
 
 h2 {
     margin-bottom: 10px;
@@ -64,9 +62,7 @@ h2 {
     color: var(--text-color);
 }
 
-.green-text {
-    color: var(--color-green);
-}
+.green-text {color: var(--color-green);}
 
 .slogan-container {
     display: flex;
@@ -111,12 +107,12 @@ h2 {
 }
 
 .mini-info {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-width: 100%;
-height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 150px;
 }
 
 .module-1 {
@@ -186,9 +182,7 @@ height: 150px;
     grid-column: 2/3;
 }
 
-.news-banner a {
-color: var(--color-green);
-}
+.news-banner a {color: var(--color-green);}
 
 .news-h3 {
     display: flex;
@@ -206,17 +200,15 @@ color: var(--color-green);
 }
 
 .news-banner-1-text {
-padding: 10px;
-width: 75%;
-height: 75%;
-display: flex;
-flex-direction: column;
-align-items: center;
+    padding: 10px;
+    width: 75%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.news-banner-1-text a {
-text-decoration: none;
-}
+.news-banner-1-text a {text-decoration: none;}
 
 .info-project {
     display: flex;
@@ -236,5 +228,12 @@ text-decoration: none;
 }
 
 .info-project-text h3{
-font-size: 31px;
+    font-size: 31px;
+}
+
+.document {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
