--- a/website/static/css/theme.css
+++ b/website/static/css/theme.css
@@ -36,6 +36,11 @@ main {
     justify-content: center;
 }
 
+.main-content-document {
+    width: 40%;
+    height: 100%;
+}
+
 .main-content {
     width: 70%;
     height: 100%;
