--- a/website/templates/document.html
+++ b/website/templates/document.html
@@ -7,6 +7,7 @@
   <link rel = "stylesheet" href = "../static/css/header.css">
   <link rel = "stylesheet" href = "../static/css/footer.css">
   <link rel = "stylesheet" href = "../static/css/main.css">
+  <link rel = "stylesheet" href = "../static/css/document.css">
   <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap">
 </head>
 <body>
